Added a tooltip/information area to staff popup menus

--- a/pages/html/popups/download_data.html
+++ b/pages/html/popups/download_data.html
@@ -4,9 +4,19 @@
 <div class="card text" style="transform: translateY(-100px)">
   <header>
     <div class="close">
-      <img src="../../images/svg/cross.svg" alt="X">
+      <img src="../../images/svg/cross.svg" alt="close-x">
     </div>
     <h3>Download Data</h3>
+    <div class="info">
+      <img src="../../images/svg/info.svg" alt="info-i">
+    </div>
   </header>
   <divider></divider>
+  <form id="download_data_form">
+    <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
+    <div class="error_wrapper"></div>
+    <div class="tooltip_wrapper">
+      <p>Admin users will be notified when data is downloaded from the system</p>
+    </div>
+  </form>
 </div>
