--- a/pages/html/popups/sign_user_in.html
+++ b/pages/html/popups/sign_user_in.html
@@ -4,9 +4,12 @@
 <div class="card text" style="transform: translateY(-100px)">
   <header>
     <div class="close">
-      <img src="../../images/svg/cross.svg" alt="X">
+      <img src="../../images/svg/cross.svg" alt="close-x">
     </div>
     <h3>Sign User In</h3>
+    <div class="info">
+      <img src="../../images/svg/info.svg" alt="info-i">
+    </div>
   </header>
   <divider></divider>
   <form id="sign_user_in_form">
@@ -33,5 +36,8 @@
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_in_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
+    <div class="tooltip_wrapper">
+      <p>The user will be signed in for an event if one is selected</p>
+    </div>
   </form>
 </div>
