Minor changes to the staff pages tables
-> Made it so the staff page table headers have a darker background when the background gradient is too bright for the white text
-> Fixed a bug where times on the 'user status' table where displaying seconds
-> Events tables now display the staff message
-> Staff table columns now have default and max-widths to help make column formatting more consistent
-> Also fixed a bug where the sidebar was becoming 'stuck' if the page was refreshed with a small viewport width

--- a/pages/html/popups/sign_user_in.html
+++ b/pages/html/popups/sign_user_in.html
@@ -38,6 +38,7 @@
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
       <p>The user will be signed in for an event if one is selected</p>
+      <p>This will update their location</p>
     </div>
   </form>
 </div>
