Added a watermark with GitHub to the app

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -199,4 +199,8 @@
       </section>
     </div>
   </div>
+  <a class="github_wrapper">
+    <img src="../../images/svg/github.svg" alt="Github SVG">
+    <p>lwholten</p>
+  </a>
 </body>
