--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -111,4 +111,8 @@
       </form>
     </div>
   </section>
+  <a class="github_wrapper">
+    <img src="../../images/svg/github.svg" alt="Github SVG">
+    <p>lwholten</p>
+  </a>
 </body>
