--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -95,16 +95,16 @@
       <header>
         <h2>Staff Login</h2>
       </header>
-      <form id="staff_login_form" class="text" action="" method="POST">
+      <form id="staff_login_form" class="text">
         <input type="hidden" name="staff_login_form" value="true"/>
         <label for="staff_username"><h3>Username</h3></label>
         <div class="search_wrapper">
-          <input required type="text" class="input_field capitalize" name="staff_username" placeholder="" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+          <input required type="text" class="input_field" name="staff_username" placeholder="" value="" autocomplete="off"/>
         </div>
         <divider></divider>
         <label for="staff_password"><h3>Password</h3></label>
         <div class="search_wrapper">
-          <input type="password" class="input_field" id="staff_password" name="staff_password" placeholder="" value="">
+          <input type="password" class="input_field" id="staff_password" name="staff_password" placeholder="" value="" autocomplete="off">
         </div>
         <divider></divider>
         <button type="submit" id="staff_sign_in_button" class="blue_button"><h4>Submit</h4></button>
