Added sections for administrators to add/remove/change data
-> Honestly cannot be bothered to state the changes, just have a look for yourself

--- a/pages/html/admin_sections/edit_events_section.html
+++ b/pages/html/admin_sections/edit_events_section.html
@@ -9,6 +9,10 @@
   <div class="table_wrapper">
     <header>
       <h3>Events</h2>
+      <container>
+        <button class="admin_overlay_trigger" data-trigger-type="addevent">Add Event</button>
+        <button class="admin_overlay_trigger" data-trigger-type="removeevent">Remove</button>
+      </container>
     </header>
     <table id="events_table"></table>
     <footer/>
