--- a/pages/html/admin_sections/edit_locations_section.html
+++ b/pages/html/admin_sections/edit_locations_section.html
@@ -9,6 +9,10 @@
   <div class="table_wrapper">
     <header>
       <h3>Locations</h2>
+      <container>
+        <button class="admin_overlay_trigger" data-trigger-type="addlocation">Add Location</button>
+        <button class="admin_overlay_trigger" data-trigger-type="removelocation">Remove</button>
+      </container>
     </header>
     <table id="locations_table"></table>
     <footer/>
