--- a/pages/html/admin_sections/edit_staff_section.html
+++ b/pages/html/admin_sections/edit_staff_section.html
@@ -9,6 +9,10 @@
   <div class="table_wrapper">
     <header>
       <h3>Staff Users</h2>
+      <container>
+        <button class="admin_overlay_trigger" data-trigger-type="addstaff">Add Staff</button>
+        <button class="admin_overlay_trigger" data-trigger-type="removestaff">Remove</button>
+      </container>
     </header>
     <table id="staff_users_table"></table>
     <footer/>
