--- a/pages/html/admin_sections/edit_users_section.html
+++ b/pages/html/admin_sections/edit_users_section.html
@@ -9,6 +9,10 @@
   <div class="table_wrapper">
     <header>
       <h3>Users</h2>
+      <container>
+        <button class="admin_overlay_trigger" data-trigger-type="adduser">Add User</button>
+        <button class="admin_overlay_trigger" data-trigger-type="removeuser">Remove</button>
+      </container>
     </header>
     <table id="users_table"></table>
     <footer/>
