--- a/pages/html/popups/staff/download_data.html
+++ b/pages/html/popups/staff/download_data.html
@@ -13,7 +13,7 @@
   </header>
   <divider></divider>
   <form id="download_data_form">
-    <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
+    <button type="submit" id="download_data_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
       <p>Admin users will be notified when data is downloaded from the system</p>
