--- a/pages/html/popups/staff/restrict_user.html
+++ b/pages/html/popups/staff/restrict_user.html
@@ -1,38 +1,37 @@
 <!DOCTYPE html>
-<!-- This file contains the HTML code used to structure the 'mark user away' popup -->
+<!-- This file contains the HTML code used to structure the 'restrict user' popup -->
 <!-- It is intended to be loaded via JavaScript not loaded directly -->
 <div class="card text" style="transform: translateY(-100px)">
   <header>
     <div class="close">
       <img src="../../images/svg/cross.svg" alt="close-x">
     </div>
-    <h3>Mark User Away</h3>
+    <h3>Restrict User</h3>
     <div class="info">
       <img src="../../images/svg/info.svg" alt="info-i">
     </div>
   </header>
   <divider></divider>
-  <form id="mark_user_away_form">
+  <form id="restrict_user_form">
     <label for="user_name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
       <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>Date expected back</h4></label>
+    <label for="user_event_time"><h4>End Date</h4></label>
     <input type="date" id="date_field" name="date_field" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_time"><h4>Time expected back</h4></label>
+    <label for="user_event_time"><h4>End Time</h4></label>
     <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_location_field"><h4>Reason</h4></label>
+    <label for="location_field"><h4>Reason</h4></label>
     <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
-      <p>Users that are away cannot use the system until they are marked present</p>
-      <p>This is useful for users who may be sick</p>
+      <p>Restricted users are not allowed to sign out unless it is for an event.</p>
     </div>
   </form>
 </div>
