--- a/pages/html/popups/staff/sign_user_out.html
+++ b/pages/html/popups/staff/sign_user_out.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
-<!-- This file contains the HTML code used to structure the 'sign user in' popup -->
+<!-- This file contains the HTML code used to structure the 'sign user out' popup -->
 <!-- It is intended to be loaded via JavaScript not loaded directly -->
 <div class="card text" style="transform: translateY(-100px)">
   <header>
     <div class="close">
       <img src="../../images/svg/cross.svg" alt="close-x">
     </div>
-    <h3>Sign User In</h3>
+    <h3>Sign User Out</h3>
     <div class="info">
       <img src="../../images/svg/info.svg" alt="info-i">
     </div>
   </header>
   <divider></divider>
-  <form id="sign_user_in_form">
+  <form id="sign_user_out_form">
     <label for="user_name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
       <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
+    <label for="location_field"><h4>Location</h4></label>
+    <div class="search_wrapper">
+      <input type="text" class="capitalize" id="location_field" name="location_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <ul id="user_location_suggestions" class="suggested_inputs"></ul>
+    </div>
+    <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_event_field"><h4>Event</h4></label>
     <div class="search_wrapper">
-      <input type="text" class="capitalize" id="user_event_field" data-nature="signin" name="event_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input type="text" class="capitalize" id="user_event_field" data-nature="signout" name="event_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_event_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0px 10px 0;"></div>
     <div class="event_timing_wrapper">
       <label for="event_timing"><h4>Timing</h4></label>
-      <input id="user_event_timing" name="event_timing" type="range" step="1" min="-45" max="45"></input>
+      <input is="user_event_timing" name="event_timing" type="range" step="1" min="-45" max="45"></input>
       <output>On Time</output>
       <div style="margin: 10px 0 10px 0;"></div>
     </div>
-    <label for="user_location_field"><h4>Message</h4></label>
+    <label for="location_field"><h4>Message</h4></label>
     <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
-    <button type="submit" id="sign_user_in_button"><h4>Submit</h4></button>
+    <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
-      <p>The user will be signed in for an event if one is selected</p>
-      <p>This will update their location</p>
+      <p>If the location is left empty, the user will be signed out for the event but will remain at their current location</p>
     </div>
   </form>
 </div>
