Administrators can now add/remove staff/users
Other changes include:

-> Added additional settings to 'app.ini' supporting features such as username length
-> Moved some older PHP files into a staff/ folder to help with organisation
-> changed the 'user_name_field' and 'user_event_field' IDs to 'name_field' and 'event_field' in overlay_popups.js

--- a/pages/html/popups/admin/add_event.html
+++ b/pages/html/popups/admin/add_event.html
@@ -13,7 +13,7 @@
     <label for="event_name_field"><h4>Event Name</h4></label>
     <input type="text" class="capitalize" id="event_name_field" name="event_name_field" placeholder="Required" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="event_name_field"><h4>Location</h4></label>
+    <label for="location_field"><h4>Location</h4></label>
     <div class="search_wrapper">
         <input type="text" class="capitalize" id="location_field" name="location_field" placeholder="Required" value="" autocomplete="off"/>
         <ul class="suggested_inputs capitalize"></ul>
