--- a/pages/html/popups/admin/add_user.html
+++ b/pages/html/popups/admin/add_user.html
@@ -6,7 +6,7 @@
     <div class="close">
       <img src="../../images/svg/cross.svg" alt="close-x">
     </div>
-    <h3>Add Location</h3>
+    <h3>Add User</h3>
     <div class="info">
       <img src="../../images/svg/info.svg" alt="info-i">
     </div>
@@ -26,15 +26,15 @@
     <h4>Gender</h4>
     <div class="radio_wrapper">
       <container>
-        <input required type="radio" name="user_gender_field" value="user"></input>
+        <input required type="radio" name="user_gender_field" value="m"></input>
         <label>Male</label>
       </container>
       <container>
-        <input type="radio" name="user_gender_field" value="moderator"></input>
+        <input type="radio" name="user_gender_field" value="f"></input>
         <label>Female</label>
       </container>
       <container>
-        <input type="radio" name="user_gender_field" value="admin" checked="checked"></input>
+        <input type="radio" name="user_gender_field" value="o" checked="checked"></input>
         <label>Other</label>
       </container>
     </div>
