--- a/pages/html/popups/admin/remove_event.html
+++ b/pages/html/popups/admin/remove_event.html
@@ -13,9 +13,9 @@
   </header>
   <divider></divider>
   <form id="remove_event_form">
-    <label for="user_event_field"><h4>Event Name</h4></label>
+    <label for="event_field"><h4>Event Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="user_event_field" name="event_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="event_field" name="event_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="event_suggestions" class="suggested_inputs capitalize"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
