--- a/pages/html/popups/admin/add_staff.html
+++ b/pages/html/popups/admin/add_staff.html
@@ -14,13 +14,13 @@
   <divider></divider>
   <form id="add_staff_form">
     <label for="staff_username_field"><h4>Username</h4></label>
-    <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+    <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <div class="double_input_wrapper">
       <label for="staff_fname_field"><h4>First Name</h4></label>
-      <input required type="text" class="capitalize" id="staff_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="staff_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off"/>
       <label for="staff_lname_field"><h4>Last Name</h4></label>
-      <input required type="text" class="capitalize" id="staff_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="staff_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off"/>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label><h4>Access Level</h4></label>
