--- a/pages/html/popups/admin/remove_user.html
+++ b/pages/html/popups/admin/remove_user.html
@@ -12,10 +12,10 @@
     </div>
   </header>
   <divider></divider>
-  <form id="remove_staff_form">
-    <label for="user_name_field"><h4>Name</h4></label>
+  <form id="remove_user_form">
+    <label for="name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="uppercase" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="uppercase" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
