--- a/pages/html/popups/staff/change_staff_password.html
+++ b/pages/html/popups/staff/change_staff_password.html
@@ -11,13 +11,13 @@
   </header>
   <divider></divider>
   <form id="change_staff_password_form">
-    <label for="user_name_field"><h4>Old Password</h4></label>
+    <label for="old_password_field"><h4>Old Password</h4></label>
     <input required type="password" id="old_password_field" name="old_password_field" placeholder="" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_name_field"><h4>New Password</h4></label>
+    <label for="new_password_field"><h4>New Password</h4></label>
     <input required type="password" id="new_password_field" name="new_password_field" placeholder="" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_name_field"><h4>Confirm New Password</h4></label>
+    <label for="confirm_new_password_field"><h4>Confirm New Password</h4></label>
     <input required type="password" id="confirm_new_password_field" name="confirm_new_password_field" placeholder="" value="" autocomplete="off"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="change_staff_password_button"><h4>Submit</h4></button>
