--- a/pages/html/popups/staff/sign_user_out.html
+++ b/pages/html/popups/staff/sign_user_out.html
@@ -13,9 +13,9 @@
   </header>
   <divider></divider>
   <form id="sign_user_out_form">
-    <label for="user_name_field"><h4>Name</h4></label>
+    <label for="name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="user_name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
@@ -25,9 +25,9 @@
       <ul id="user_location_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
-    <label for="user_event_field"><h4>Event</h4></label>
+    <label for="event_field"><h4>Event</h4></label>
     <div class="search_wrapper">
-      <input type="text" class="capitalize" id="user_event_field" data-nature="signout" name="event_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input type="text" class="capitalize" id="event_field" data-nature="signout" name="event_field" placeholder="Conditional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
       <ul id="user_event_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0px 10px 0;"></div>
