Staff users can now add/remove events and locations

--- a/pages/html/admin_sections/edit_events_section.html
+++ b/pages/html/admin_sections/edit_events_section.html
@@ -10,8 +10,8 @@
     <header>
       <h3>Events</h2>
       <container>
-        <button class="admin_overlay_trigger" data-trigger-type="addevent">Add Event</button>
-        <button class="admin_overlay_trigger" data-trigger-type="removeevent">Remove</button>
+        <button id="add_event_button" class="admin_overlay_trigger" data-trigger-type="addevent">Add Event</button>
+        <button id="remove_event_button" class="admin_overlay_trigger" data-trigger-type="removeevent">Remove</button>
       </container>
     </header>
     <table id="events_table"></table>
