--- a/pages/html/admin_sections/edit_locations_section.html
+++ b/pages/html/admin_sections/edit_locations_section.html
@@ -10,8 +10,8 @@
     <header>
       <h3>Locations</h2>
       <container>
-        <button class="admin_overlay_trigger" data-trigger-type="addlocation">Add Location</button>
-        <button class="admin_overlay_trigger" data-trigger-type="removelocation">Remove</button>
+        <button id="add_location_button" class="admin_overlay_trigger" data-trigger-type="addlocation">Add Location</button>
+        <button id="remove_location_button" class="admin_overlay_trigger" data-trigger-type="removelocation">Remove</button>
       </container>
     </header>
     <table id="locations_table"></table>
