--- a/pages/html/admin_sections/edit_staff_section.html
+++ b/pages/html/admin_sections/edit_staff_section.html
@@ -10,8 +10,8 @@
     <header>
       <h3>Staff Users</h2>
       <container>
-        <button class="admin_overlay_trigger" data-trigger-type="addstaff">Add Staff</button>
-        <button class="admin_overlay_trigger" data-trigger-type="removestaff">Remove</button>
+        <button id="add_staff_button" class="admin_overlay_trigger" data-trigger-type="addstaff">Add Staff</button>
+        <button id="remove_staff_button" class="admin_overlay_trigger" data-trigger-type="removestaff">Remove</button>
       </container>
     </header>
     <table id="staff_users_table"></table>
