--- a/pages/html/admin_sections/edit_users_section.html
+++ b/pages/html/admin_sections/edit_users_section.html
@@ -10,8 +10,8 @@
     <header>
       <h3>Users</h2>
       <container>
-        <button class="admin_overlay_trigger" data-trigger-type="adduser">Add User</button>
-        <button class="admin_overlay_trigger" data-trigger-type="removeuser">Remove</button>
+        <button id="add_user_button" class="admin_overlay_trigger" data-trigger-type="adduser">Add User</button>
+        <button id="remove_user_button" class="admin_overlay_trigger" data-trigger-type="removeuser">Remove</button>
       </container>
     </header>
     <table id="users_table"></table>
