--- a/pages/html/popups/admin/remove_location.html
+++ b/pages/html/popups/admin/remove_location.html
@@ -22,7 +22,7 @@
     <button type="submit" id="remove_location_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
-      <p>Note that this action cannot be undone</p>
+      <p>Note that this will also remove all logs and events with this location</p>
     </div>
   </form>
 </div>
