--- a/pages/html/popups/staff/download_data.html
+++ b/pages/html/popups/staff/download_data.html
@@ -14,6 +14,9 @@
   <divider></divider>
   <form id="download_data_form">
     <button type="submit" id="download_data_button"><h4>Submit</h4></button>
+    <div style="margin: 10px 0 10px 0;"></div>
+    <h4>This feature is still under development, but it will be available soon!</h4>
+    <div style="margin: 10px 0 10px 0;"></div>
     <div class="error_wrapper"></div>
     <div class="tooltip_wrapper">
       <p>Admin users will be notified when data is downloaded from the system</p>
