--- a/pages/html/popups/admin/add_location.html
+++ b/pages/html/popups/admin/add_location.html
@@ -20,7 +20,7 @@
     <textarea type="text" class="capitalize" id="location_keywords_field" name="keywords_field" placeholder="Optional, List, Of, Key, Words" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="location_description_field"><h4>Description</h4></label>
-    <textarea type="text" class="capitalize" id="location_description_field" name="keywords_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
+    <textarea type="text" class="capitalize" id="location_description_field" name="description_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="add_location_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
