Minor bugfix for Edge users where suggestions were overlapping

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -63,7 +63,7 @@
         <input type="hidden" name="user_sign_in" value="true"/>
         <label for="sign_in_field"><h3>Your Name</h3></label>
         <div class="search_wrapper">
-          <input required type="text" class="input_field capitalize" name="name_field" placeholder="Initials work too!" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+          <input required type="text" class="input_field capitalize" name="name_field" placeholder="Initials work too" value="" autocomplete="off" aria-autocomplete="list" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
           <ul class="suggested_inputs"></ul>
         </div>
         <divider></divider>
@@ -78,13 +78,13 @@
         <input type="hidden" name="user_sign_out" value="true"/>
         <label for="sign_out_field"><h3>Your Name</h3></label>
         <div class="search_wrapper">
-          <input required type="text" class="input_field capitalize" name="name_field" placeholder="Initials work too!" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+          <input required type="text" class="input_field capitalize" name="name_field" placeholder="Initials work too" value="" autocomplete="off" aria-autocomplete="list" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
           <ul class="suggested_inputs"></ul>
         </div>    
         <divider></divider>
         <label for="location"><h3>Location</h3></label>
         <div class="search_wrapper">
-          <input type="text" class="input_field capitalize" name="location_field" placeholder="" value ="" autocomplete="off" pattern="[a-zA-Z\s]+"></input>
+          <input type="text" class="input_field capitalize" name="location_field" placeholder="Where you are going" value ="" autocomplete="off" aria-autocomplete="list" aria-autocomplete="list" pattern="[a-zA-Z\s]+"></input>
           <ul class="suggested_inputs"></ul>
         </div>
         <divider></divider>
@@ -99,12 +99,12 @@
         <input type="hidden" name="staff_login_form" value="true"/>
         <label for="staff_username"><h3>Username</h3></label>
         <div class="search_wrapper">
-          <input required type="text" class="input_field" name="staff_username" placeholder="" value="" autocomplete="off"/>
+          <input required type="text" class="input_field" name="staff_username" placeholder="" value="" autocomplete="off" aria-autocomplete="list"/>
         </div>
         <divider></divider>
         <label for="staff_password"><h3>Password</h3></label>
         <div class="search_wrapper">
-          <input type="password" class="input_field" id="staff_password" name="staff_password" placeholder="" value="" autocomplete="off">
+          <input type="password" class="input_field" id="staff_password" name="staff_password" placeholder="" value="" autocomplete="off" aria-autocomplete="list">
         </div>
         <divider></divider>
         <button type="submit" id="staff_sign_in_button" class="blue_button"><h4>Submit</h4></button>
