--- a/pages/html/popups/admin/add_user.html
+++ b/pages/html/popups/admin/add_user.html
@@ -15,13 +15,13 @@
   <form id="add_user_form">
     <div class="double_input_wrapper">
       <label for="user_fname_field"><h4>First Name</h4></label>
-      <input required type="text" class="capitalize" id="user_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="user_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <label for="user_lname_field"><h4>Last Name</h4></label>
-      <input required type="text" class="capitalize" id="user_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="user_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_email_field"><h4>Email</h4></label>
-    <input type="text" class="no_text_transform" id="user_email_field" name="email_field" placeholder="Optional" value="" autocomplete="off"/>
+    <input type="text" class="no_text_transform" id="user_email_field" name="email_field" placeholder="Optional" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <h4>Gender</h4>
     <div class="radio_wrapper">
