--- a/pages/html/popups/admin/remove_location.html
+++ b/pages/html/popups/admin/remove_location.html
@@ -15,7 +15,7 @@
   <form id="remove_location_form">
     <label for="location_name_field"><h4>Location Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="location_field" name="location_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="location_field" name="location_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="location_suggestions" class="suggested_inputs capitalize"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
