--- a/pages/html/popups/admin/remove_staff.html
+++ b/pages/html/popups/admin/remove_staff.html
@@ -15,7 +15,7 @@
   <form id="remove_staff_form">
     <label for="staff_username_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="staff_username_suggestions" class="suggested_inputs no_text_transform"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
