--- a/pages/html/popups/staff/change_staff_password.html
+++ b/pages/html/popups/staff/change_staff_password.html
@@ -12,13 +12,13 @@
   <divider></divider>
   <form id="change_staff_password_form">
     <label for="old_password_field"><h4>Old Password</h4></label>
-    <input required type="password" id="old_password_field" name="old_password_field" placeholder="" value="" autocomplete="off"/>
+    <input required type="password" id="old_password_field" name="old_password_field" placeholder="" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="new_password_field"><h4>New Password</h4></label>
-    <input required type="password" id="new_password_field" name="new_password_field" placeholder="" value="" autocomplete="off"/>
+    <input required type="password" id="new_password_field" name="new_password_field" placeholder="" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="confirm_new_password_field"><h4>Confirm New Password</h4></label>
-    <input required type="password" id="confirm_new_password_field" name="confirm_new_password_field" placeholder="" value="" autocomplete="off"/>
+    <input required type="password" id="confirm_new_password_field" name="confirm_new_password_field" placeholder="" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="change_staff_password_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
