--- a/pages/html/popups/staff/unrestrict_user.html
+++ b/pages/html/popups/staff/unrestrict_user.html
@@ -15,7 +15,7 @@
   <form id="unrestrict_user_form">
     <label for="name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
