--- a/pages/html/popups/admin/add_staff.html
+++ b/pages/html/popups/admin/add_staff.html
@@ -14,13 +14,13 @@
   <divider></divider>
   <form id="add_staff_form">
     <label for="staff_username_field"><h4>Username</h4></label>
-    <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off"/>
+    <input required type="text" class="no_text_transform" id="staff_username_field" name="username_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <div class="double_input_wrapper">
       <label for="staff_fname_field"><h4>First Name</h4></label>
-      <input required type="text" class="capitalize" id="staff_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off"/>
+      <input required type="text" class="capitalize" id="staff_fname_field" name="fname_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list"/>
       <label for="staff_lname_field"><h4>Last Name</h4></label>
-      <input required type="text" class="capitalize" id="staff_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off"/>
+      <input required type="text" class="capitalize" id="staff_lname_field" name="lname_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list"/>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label><h4>Access Level</h4></label>
@@ -40,10 +40,10 @@
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="staff_email_field"><h4>Email</h4></label>
-    <input type="text" class="no_text_transform" id="staff_email_field" name="email_field" placeholder="Optional" value="" autocomplete="off"/>
+    <input type="text" class="no_text_transform" id="staff_email_field" name="email_field" placeholder="Optional" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="staff_password_field"><h4>Password</h4></label>
-    <input type="password" class="no_text_transform" id="staff_password_field" name="password_field" placeholder="" value="" autocomplete="off"/>
+    <input type="password" class="no_text_transform" id="staff_password_field" name="password_field" placeholder="" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="add_staff_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
