--- a/pages/html/popups/staff/restrict_user.html
+++ b/pages/html/popups/staff/restrict_user.html
@@ -15,18 +15,18 @@
   <form id="restrict_user_form">
     <label for="name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_event_time"><h4>End Date</h4></label>
-    <input type="date" id="date_field" name="date_field" value="" autocomplete="off"/>
+    <input type="date" id="date_field" name="date_field" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="user_event_time"><h4>End Time</h4></label>
-    <input type="time" id="time_field" name="time_field" value="" autocomplete="off"/>
+    <input type="time" id="time_field" name="time_field" value="" autocomplete="off" aria-autocomplete="list"/>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="location_field"><h4>Reason</h4></label>
-    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
+    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_out_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
