--- a/pages/html/popups/staff/sign_user_in.html
+++ b/pages/html/popups/staff/sign_user_in.html
@@ -15,13 +15,13 @@
   <form id="sign_user_in_form">
     <label for="name_field"><h4>Name</h4></label>
     <div class="search_wrapper">
-      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input required type="text" class="capitalize" id="name_field" name="name_field" placeholder="Required" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="user_name_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0 10px 0;"></div>
     <label for="event_field"><h4>Event</h4></label>
     <div class="search_wrapper">
-      <input type="text" class="capitalize" id="event_field" data-nature="signin" name="event_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z\s]+"/>
+      <input type="text" class="capitalize" id="event_field" data-nature="signin" name="event_field" placeholder="Optional" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z\s]+"/>
       <ul id="user_event_suggestions" class="suggested_inputs"></ul>
     </div>
     <div style="margin: 10px 0px 10px 0;"></div>
@@ -32,7 +32,7 @@
       <div style="margin: 10px 0 10px 0;"></div>
     </div>
     <label for="location_field"><h4>Message</h4></label>
-    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" pattern="[a-zA-Z0-9\s]+"></textarea>
+    <textarea type="text" id="user_message_field" name="message_field" placeholder="Optional" value="" autocomplete="off" aria-autocomplete="list" pattern="[a-zA-Z0-9\s]+"></textarea>
     <div style="margin: 10px 0 10px 0;"></div>
     <button type="submit" id="sign_user_in_button"><h4>Submit</h4></button>
     <div class="error_wrapper"></div>
