Removed setup mode, replacing it with the 'system admin' user

--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -82,7 +82,7 @@
       <section class="main_section main_section_active" id="home_section">
         <h2>Welcome, <?=$_COOKIE["dreg_staffUsername"]?>.</h2>
         <div class="info_wrapper text">
-          <p>Welcome to DOYRMS registration, a web application programmed by Luke Holten.</p>
+          <p>Welcome to DOYRMS registration.</p>
           <p>This is the home area. Using the control panel located here, you can carry out many operations such as searching for a specific user or signing a user in/out.</p>
         </div>
         <spacer></spacer>
